tests/NormalTests/paczka1/fuzzy1/55405163.err
Error in line 14: S730 S730 51,0
Error in line 17: S730 S609 64,7
